# QSim-Playground

./: .env.example  .gitignore  .pre-commit-config.yaml  CURRENT_DAY.md  DEPLOYMENT_LOG.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/api/: deps.py  execution.py  export.py  limits.py  main.py  middleware.py  run_dev.py  schemas.py
backend/api/routes/: __init__.py  auth.py  debug.py  health.py  parse.py  profile.py  runs.py  share.py  templates.py
backend/cli/: __init__.py  main.py
backend/core/: __init__.py  circuit_gen.py  critic_refiner.py  evaluator.py  ir.py  ir_schema.json  limits.py  local_pipeline.py  orchestrator.py  parser.py  runner.py  templates.py
backend/core/agents/: __init__.py  base.py  critic.py  decomp.py  domain.py  graph.py  penalty.py  refiner.py  slack.py
backend/core/agents/prompts/: base_qubo.md  critic.md  decomp.md  domain.md  graph.md  penalty.md  refiner.md  slack.md
backend/infra/: gemini.py  settings.py  supabase.py
backend/infra/migrations/: 001_initial_schema.sql  002_add_run_sharing.sql
backend/scripts/: check_ir_schema.py  deploy_cloud_run.sh  manual_concurrency_test.py
backend/tests/: test_agent_base.py  test_api_endpoints.py  test_api_skeleton.py  test_circuit_runner.py  test_cli.py  test_cli_run.py  test_concurrent_users.py  test_critic_refiner.py  test_evaluator.py  test_execution.py  test_export.py  test_gemini_client.py  test_ir.py  test_limits.py  test_migrations.py  test_orchestrator.py  test_parser.py  test_rls.py  test_settings.py  test_supabase_connection.py  test_templates.py
backend/tests/core/: test_package.py
backend/tests/fixtures/: knapsack_numpy.py  max_cut_numpy.py  portfolio.py
backend/tests/fixtures/pipeline_outputs/: knapsack.json  max_cut.json  portfolio.json
backend/tests/test_agents/: helpers.py  test_decomp.py  test_diversity.py  test_domain.py  test_graph.py  test_penalty.py  test_slack.py
docs/: ARCHITECTURE.md  DECISIONS.md  INTEGRATION_TEST.md  OPERATIONS.md
docs/screenshots/: README.md
frontend/: .env.local.example  instrumentation-client.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(public)/: page.tsx
frontend/components/auth/: auth-card.tsx  login-form.tsx  reset-password-form.tsx  signup-form.tsx
frontend/components/landing/: agent-showcase.tsx  hero.tsx  honesty-section.tsx  (+3 more)
frontend/e2e/: auth.spec.ts  input-panel.spec.ts
frontend/lib/: api-server.ts  api.ts  error-state.ts  export-state.ts  keyboard-shortcuts.ts  pdf-export.ts  run-stream-state.ts  types.ts
frontend/tests/: error-state.test.ts  export-state.test.ts  keyboard-shortcuts.test.ts  run-stream-state.test.ts
scripts/: check_no_secrets.py
(+47 files in other folders)
