[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsim-playground"
version = "0.1.0"
description = "Multi-agent quantum optimization sandbox foundation."
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "KONDAPI SRI PRANAV" }]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "google-generativeai==0.8.3",
    "qiskit==1.3.1",
    "qiskit-aer==0.15.1",
    "qiskit-qasm3-import==0.6.0",
    "langgraph==0.2.60",
    "numpy==2.2.1",
    "scipy==1.15.0",
    "supabase==2.10.0",
    "python-dotenv==1.0.1",
    "typer==0.15.1",
    "structlog==24.4.0",
    "PyJWT==2.13.0",
    "sentry-sdk==2.19.2",
]

[project.scripts]
qsim = "cli.main:app"

[tool.setuptools]
packages = ["api", "api.routes", "cli", "core", "core.agents", "infra"]

[tool.setuptools.package-data]
"core.agents" = ["prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qiskit.*", "qiskit_aer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nbformat.*"]
ignore_missing_imports = true
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:qiskit.*",
    "ignore::PendingDeprecationWarning:qiskit.*",
    "ignore::DeprecationWarning:qiskit_aer.*",
]
